// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Selector /> Should render and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  position: relative;
}

.c3 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
}

.c4 {
  width: auto;
  height: auto;
}

.c5 {
  width: auto;
  height: auto;
  margin-left: 8px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  cursor: pointer;
  color: rgba(183,39,234,1);
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      role="button"
    >
      <p
        class="c2"
        color="#B727EA"
        font-weight="bold"
      >
        Label
      </p>
      <div
        class="c3"
        display="flex"
      >
        <img
          alt="?"
          class="c4"
          data-for="el-tooltip-id-asd02as"
          data-tip=""
          src="IMAGE_MOCK"
        />
      </div>
      <img
        alt="arrow"
        class="c5"
        src="IMAGE_MOCK"
        transform=""
      />
    </div>
  </div>
</div>
`;

exports[`<Selector /> Should render disabled and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  position: relative;
}

.c3 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
}

.c4 {
  width: auto;
  height: auto;
}

.c5 {
  width: auto;
  height: auto;
  margin-left: 8px;
  cursor: pointer;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  cursor: pointer;
  color: rgba(183,39,234,1);
  cursor: pointer;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 10px;
  font-weight: 700;
  color: rgba(183,39,234,1);
  white-space: nowrap;
  cursor: pointer;
  color: rgba(183,39,234,1);
  cursor: pointer;
}

.c9 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: #2F3850;
  white-space: nowrap;
  cursor: pointer;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  position: absolute;
  z-index: 999;
  top: 30px;
  right: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgba(255,255,255,1);
  box-shadow: 0px 4px 20px #E3EEFB;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-right: 20px;
  padding-left: 20px;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      role="button"
    >
      <p
        class="c2"
        color="#B727EA"
        font-weight="bold"
      >
        Label
      </p>
      <div
        class="c3"
        display="flex"
      >
        <img
          alt="?"
          class="c4"
          data-for="el-tooltip-id-asd02as"
          data-tip=""
          src="IMAGE_MOCK"
        />
      </div>
      <img
        alt="arrow"
        class="c5"
        src="IMAGE_MOCK"
        transform="rotate(180deg);"
      />
    </div>
    <div
      class="c6"
      role="listbox"
    >
      <div
        class="c7"
      >
        <p
          class="c8"
          color="#B727EA"
          font-weight="bold"
          role="option"
        >
          Label
        </p>
        <p
          class="c9"
          font-weight="bold"
          role="option"
        >
          Label2
        </p>
      </div>
    </div>
  </div>
</div>
`;
